# STAR-Stuff

./: .gitignore
ExperimentReader/: get_experiment.py
STAR_IPC/c/: CMakeLists.txt  IPCHelper.c  IPCHelper.h  process1.c
STAR_IPC/python/: IPC_helper.py  process2.py
c/: CMakeLists.txt  IPCHelper.c  IPCHelper.h  process1.c  spicenetTest.c
python/: IPC_helper.py  process2.py
